cmake_minimum_required(VERSION 3.14)
project(PATquiz)

set(CMAKE_CXX_STANDARD 11)

add_executable(PATquiz main.cpp)
add_executable(p1101quicksort p1101quicksort.cpp)
add_executable(p1102invert_a_binary_tree p1102invert_a_binary_tree.cpp)
add_executable(p1103integer_factorization p1103integer_factorization.cpp)
add_executable(p1100MarsNumbers p1100MarsNumbers.cpp)
add_executable(p1097DeduplicationonaLinkedList p1097DeduplicationonaLinkedList.cpp)
add_executable(p1098InsertionorHeapSort p1098InsertionorHeapSort.cpp)
add_executable(p1099BuildABinarySearchTree  "p1099BuildABinarySearchTree .cpp")
add_executable(p1096ConsecutiveFactors p1096ConsecutiveFactors.cpp)
add_executable(p1093CountPATs p1093CountPATs.cpp)
add_executable(p1094TheLargestGeneration p1094TheLargestGeneration.cpp)
add_executable(p1095CarsonCampus p1095CarsonCampus.cpp)
add_executable(p1106LowestPriceinSupplyChain p1106LowestPriceinSupplyChain.cpp)
add_executable(p1090HighestPriceinSupplyChain p1090HighestPriceinSupplyChain.cpp)
add_executable(p1023HaveFunwithNumbers p1023HaveFunwithNumbers.cpp)
add_executable(p1144TheMissingNumber p1144TheMissingNumber.cpp)
add_executable(p1145HashingAverageSearchTime p1145HashingAverageSearchTime.cpp)
add_executable(p1146TopologicalOrder p1146TopologicalOrder.cpp)
add_executable(p1147Heaps p1147Heaps.cpp)
add_executable(p1084BrokenKeyboard p1084BrokenKeyboard.cpp)
add_executable(p1085PerfectSequence p1085PerfectSequence.cpp)
add_executable(p1086TreeTraversalsAgain p1086TreeTraversalsAgain.cpp)
add_executable(p1087AllRoadsLeadtoRome p1087AllRoadsLeadtoRome.cpp)
add_executable(p1081RationalSum p1081RationalSum.cpp)
add_executable(p1082ReadNumberinChinese p1082ReadNumberinChinese.cpp)
add_executable(p1083ListGrades p1083ListGrades.cpp)
add_executable(p1080GraduateAdmission p1080GraduateAdmission.cpp)
add_executable(p1031HelloWorldforU p1031HelloWorldforU.cpp)
add_executable(p1032Sharing p1032Sharing.cpp)
add_executable(p1033ToFillorNottoFill  "p1033ToFillorNottoFill .cpp")
add_executable(p1034HeadofaGang p1034HeadofaGang.cpp)
add_executable(p1035Password  "p1035Password .cpp")
add_executable(p1041BeUnique p1041BeUnique.cpp)
add_executable(p1042ShufflingMachine p1042ShufflingMachine.cpp)
add_executable(p1046ShortestDistance p1046ShortestDistance.cpp)
add_executable(p1050StringSubtraction p1050StringSubtraction.cpp)
add_executable(p1054TheDominantColor p1054TheDominantColor.cpp)
add_executable(p1061Dating p1061Dating.cpp)
add_executable(p1065AplusBandC p1065AplusBandC.cpp)
add_executable(p1069TheBlackHoleofNumbers p1069TheBlackHoleofNumbers.cpp)
add_executable(p1141PATRankingofInstitutions p1141PATRankingofInstitutions.cpp)
add_executable(p1142MaximalClique p1142MaximalClique.cpp)
add_executable(p1140LookandsaySequence p1140LookandsaySequence.cpp)
add_executable(p1116ComeonLetsC p1116ComeonLetsC.cpp)
add_executable(p1117EddingtonNumber p1117EddingtonNumber.cpp)
add_executable(p1118BirdsinForest p1118BirdsinForest.cpp)
add_executable(p1119PreandPostorderTraversals p1119PreandPostorderTraversals.cpp)
add_executable(p1073ScientificNotation p1073ScientificNotation.cpp)
add_executable(p1077Kuchiguse p1077Kuchiguse.cpp)
add_executable(p1108FindingAverage p1108FindingAverage.cpp)
add_executable(p1109GroupPhoto p1109GroupPhoto.cpp)
add_executable(p1110CompleteBinaryTree p1110CompleteBinaryTree.cpp)
add_executable(p1111OnlineMap p1111OnlineMap.cpp)
add_executable(p1049CountingOnes p1049CountingOnes.cpp)
add_executable(p1132CutInteger p1132CutInteger.cpp)
add_executable(p1129RecommendationSystem p1129RecommendationSystem.cpp)
add_executable(p1130InfixExpression p1130InfixExpression.cpp)
add_executable(p1131SubwayMap p1131SubwayMap.cpp)
add_executable(p1070Mooncake p1070Mooncake.cpp)
add_executable(p1071SpeechPatterns p1071SpeechPatterns.cpp)
add_executable(p1072GasStation p1072GasStation.cpp)
add_executable(p1124RaffleforWeiboFollowers p1124RaffleforWeiboFollowers.cpp)
add_executable(p1125ChaintheRopes p1125ChaintheRopes.cpp)
add_executable(p1126EulerianPath p1126EulerianPath.cpp)
add_executable(p1127ZigZaggingonaTree p1127ZigZaggingonaTree.cpp)
add_executable(p1025PATRanking p1025PATRanking.cpp)
add_executable(p1074ReversingLinkedList p1074ReversingLinkedList.cpp)
add_executable(p1075PATJudge p1075PATJudge.cpp)
add_executable(p1076ForwardsonWeibo p1076ForwardsonWeibo.cpp)
add_executable(p1028ListSorting p1028ListSorting.cpp)
add_executable(p1021DeepestRoot p1021DeepestRoot.cpp)

add_executable(p1017 p1017.cpp)
add_executable(p1018 p1018.cpp)
add_executable(cpp_usage cpp_usage.cpp)
add_executable(map_usage map_usage.cpp)
add_executable(map_usage_sort map_usage_sort.cpp)
add_executable(main main.cpp)
add_executable(set_usage set_usage.cpp)
add_executable(p1020 p1020.cpp)
add_executable(map_yyy map_yyy.cpp)
add_executable(p1092tobuyornottobuy p1092tobuyornottobuy.cpp)
add_executable(string_yyy string_yyy.cpp)
add_executable(p1004 p1004.cpp)
add_executable(tree_traversal tree_traversal.cpp)

add_executable(avl_repeated avl_repeated.cpp)
add_executable(avl_norepeat avl_norepeat.cpp)
add_executable(avl_yyy avl_yyy.cpp)
add_executable(p1150travel_sales_man p1150travel_sales_man.cpp)
add_executable(p1151lca p1151lca.cpp)
add_executable(p1152GoogleRecruitment p1152GoogleRecruitment.cpp)
add_executable(p1027colors_in_mars p1027colors_in_mars.cpp)
add_executable(p1058A_B_hogwarts p1058A_B_hogwarts.cpp)